--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,27 @@
-<div
+<body
 style="
+background-color: burlywood;
+"
+>
+  <button
+  style="
+    height: 3em;
+    width: 10em;
+    font-size: larger;
+    font-weight: bold;
+    color: brown;
+  "
+  >Añadir</button>
+
+  <div
+  style="
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    column-gap: 100em;
   "
->
-  <app-data-display></app-data-display>
-</div>
+  >
+    <app-data-display/>
+  </div>
+</body>
