--- a/src/app/data-display/data-display.component.html
+++ b/src/app/data-display/data-display.component.html
@@ -1,7 +1,7 @@
 <ul>
   @for (post of data; track post.id) {
     <li style="padding-bottom: 5em;">
-      <h1 style="color: brown;">{{post.title}}</h1>
+      <h1 style="color: brown; font-weight: bold;">{{post.title}}</h1>
       <img src="{{post.image}}" height="500em">
     </li>
   }
