--- a/src/app/form-create/form-create.component.html
+++ b/src/app/form-create/form-create.component.html
@@ -1,3 +1,17 @@
+<form [formGroup]="formCafe" style="padding: 3em;">
+  <label for="name">Nombre del café: </label>
+  <input type="text" formControlName="title" required style="margin-bottom: 2em;">
+  <br>
+  <label for="url">URL de imagen del café: </label>
+  <input type="url" formControlName="image" required style="margin-bottom: 2em;">
+  <button (click)="onSubmit()">Aceptar</button>
+  <button (click)="closeModal()" style="margin-left: 2em;">Cancelar</button>
+</form>
+
+{{formCafe.value | json }}
+
+<!--
+
 <form [formGroup]="formCreate" style="padding: 3em;">
   <label for="first-name">Nombre del café: </label>
   <input type="text" formControlName="title" required style="margin-bottom: 2em;">
@@ -9,19 +23,5 @@
 </form>
 
 {{formCreate.value | json }}
-
-<!--
-
-<form [formGroup]="formCafe" style="padding: 3em;">
-  <label for="name">Nombre del café: </label>
-  <input type="text" formControlName="title" required style="margin-bottom: 2em;">
-  <br>
-  <label for="url">URL de imagen del café: </label>
-  <input type="url" formControlName="image" required style="margin-bottom: 2em;">
-  <button (click)="onSubmit()">Aceptar</button>
-  <button style="margin-left: 2em;">Cancelar</button>
-</form>
-
-{{formCafe.value | json }}
 
 -->
