--- a/src/app/data-display/data-display.component.html
+++ b/src/app/data-display/data-display.component.html
@@ -1,8 +1,9 @@
-<ul>
+<ul style="list-style: none;">
   @for (post of data; track post.id) {
-    <li style="padding-bottom: 5em;">
+    <li style="padding-bottom: 5em; text-align: center;">
       <h1 style="color: brown; font-weight: bold;">{{post.title}}</h1>
       <img src="{{post.image}}" height="500em">
+      <br>
     </li>
   }
 </ul>
