--- a/src/app/form-update/form-update.component.html
+++ b/src/app/form-update/form-update.component.html
@@ -4,6 +4,6 @@
   <br>
   <label for="url">URL de imagen del café: </label>
   <input type="url" formControlName="image" required style="margin-bottom: 2em;">
-  <button (click)="onSubmit()">Aceptar</button>
-  <button (click)="closeModal()" style="margin-left: 2em;">Cancelar</button>
+  <button (click)="onSubmit()">Actualizar</button>
+  <button (click)="closeModal()" style="margin-left: 1.5em;">Cancelar</button>
 </form>
