--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,19 @@
-<form [formGroup]="formLogin" style="padding: 3em;">
-  <h1>Nombre de usuario</h1>
-  <hr>
-  <input type="text" formControlName="username" required style="margin-bottom: 2em;">
-  <br>
-  <h1>Contraseña</h1>
-  <hr>
-  <input type="password" formControlName="password" required style="margin-bottom: 2em;">
-  <button (click)="login()">Aceptar</button>
-</form>
-
-{{formLogin.value | json }}
+<html>
+  <body>
+    <form [formGroup]="formLogin" style="padding: 3em;">
+      <h1>Nombre de usuario</h1>
+      <hr>
+      <br>
+      <input type="text" formControlName="username" required style="margin-bottom: 2em;">
+      <br>
+      <br>
+      <br>
+      <h1>Contraseña</h1>
+      <hr>
+      <br>
+      <input type="password" formControlName="password" required style="margin-bottom: 2em;">
+      <br>
+      <button (click)="login()">Aceptar</button>
+    </form>
+  </body>
+</html>
