Botón de regreso arriba implementado

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -23,7 +23,22 @@
         color: brown;
       "
       >Añadir</button>
+
       <app-data-display/>
+
+      <button (click)="topFunction()"
+      style="
+        height: 3em;
+        width: 10em;
+        align-self: flex-end;
+        margin-bottom: 3em;
+        margin-right: 3em;
+        font-size: larger;
+        font-weight: bold;
+        color: brown;
+      "
+
+      >Volver arriba</button>
     </div>
   </body>
 </html>
